# ExperimentsService/swagger_server/controllers/default_controller.py
@@ -1,6 +1,8 @@
 import connexion
 import six
+import logging
 
+################################## GENERATED IMPORTS ########################################
 from swagger_server.models.already_exists_response import AlreadyExistsResponse  # noqa: E501
 from swagger_server.models.error_response import ErrorResponse  # noqa: E501
 from swagger_server.models.existing_experiment_post import ExistingExperimentPost  # noqa: E501
@@ -9,9 +11,18 @@ from swagger_server.models.new_experiment_post import NewExperimentPost  # noqa:
 from swagger_server.models.not_allowed_response import NotAllowedResponse  # noqa: E501
 from swagger_server.models.ok_response import OkResponse  # noqa: E501
 from swagger_server import util
+################################## CUSTOM IMPORTS ###########################################
+from swagger_server.infrastructure.db.mysql import mysql
+from swagger_server.infrastructure.converters import experimentConverter as converter
+from swagger_server.database_models import ThresholdExperiment
+from swagger_server.database_models import CorrelationExperiment
+
+sqlManager = mysql.SqlManager()
+logger = logging.getLogger()
+logger.setLevel(logging.INFO)
 
 
-def experiments_create(X_Request_ID, idToken, user_id, experiment=None):  # noqa: E501
+def experiments_create():  # noqa: E501
     """experiments_create
 
     Add a new experiment to a users account # noqa: E501
@@ -32,7 +43,7 @@ def experiments_create(X_Request_ID, idToken, user_id, experiment=None):  # noqa
     return 'do some magic!'
 
 
-def experiments_delete(X_Request_ID, idToken, experimentID, user_id):  # noqa: E501
+def experiments_delete():  # noqa: E501
     """experiments_delete
 
     Delete a experiment # noqa: E501
@@ -51,7 +62,7 @@ def experiments_delete(X_Request_ID, idToken, experimentID, user_id):  # noqa: E
     return 'do some magic!'
 
 
-def experiments_get_all(X_Request_ID, idToken, user_id):  # noqa: E501
+def experiments_get_all():  # noqa: E501
     """experiments_get_all
 
     Get all experiments associated/owned by a user # noqa: E501
@@ -65,10 +76,39 @@ def experiments_get_all(X_Request_ID, idToken, user_id):  # noqa: E501
 
     :rtype: GetExperimentResult
     """
-    return 'do some magic!'
+
+    thresholdExperiment = sqlManager.db.Table(
+        'threshold_experiments', sqlManager.metadata, autoload=True, autoload_with=sqlManager.engine)
+    correlationExperiment = sqlManager.db.Table(
+        'correlation_experiments', sqlManager.metadata, autoload=True, autoload_with=sqlManager.engine)
+
+   # idToken = connexion.request.headers['idToken']
+    resultset = sqlManager.selectAll(
+        [correlationExperiment])
+
+    print(resultset)
+
+    experiments = []
+
+    for result in resultset:
+        print(result)
+        if result["correlation"] != None:
+            # its a correlation experiment
+            experiments.append(
+                converter.convertDbCorrelationExperimentToSwaggerExperiment(result))
+    
+    resultset = sqlManager.selectAll([thresholdExperiment])
+    for result in resultset:
+        # its a threshold experiment
+        experiments.append(
+            converter.convertDbThresholdExperimentToSwaggerExperiment(result))
+
+    result = GetExperimentResult(experiments=experiments)
+
+    return result
 
 
-def experiments_update(X_Request_ID, idToken, user_id, experiment=None):  # noqa: E501
+def experiments_update():  # noqa: E501
     """experiments_update
 
     Update a experiment # noqa: E501
